--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     background: #1b1b27;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     padding: 8px 0;
 }
 
@@ -48,12 +48,15 @@ body {
 }
 
 .hero-container {
-    display: block;
+    display: flex;
     background: url('https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?cs=srgb&dl=pexels-luis-gomes-546819.jpg&fm=jpg') center center no-repeat;
     background-size: cover;
     height: 80vh;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+   
 }
 
 .hero-content {
@@ -81,6 +84,26 @@ body {
     justify-content: center;
     align-items: center;
     padding: 12px;
+}
+
+.contact-container {
+text-align: center;
+}
+
+
+.facebook {
+    background: #3b5998;
+    color: white;
+    padding: 20px;
+    font-size: 40px;
+    width: 60px;
+    text-decoration: none;
+    margin-top: -12px;
+   }
+    
+    
+.facebook:hover {
+    opacity: 0.9;
 }
 
 .projects-container {
@@ -168,7 +191,7 @@ a:hover, a:active {
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
-    margin: 12px auto 24px;
+    margin: 20px auto 20px;
     display: block;
 }
 
@@ -178,9 +201,9 @@ a:hover, a:active {
     border: 2px solid #333333;
 }
 .hero-content .btn:hover, .hero-content .btn:active {
-    background: #333333;
+    background: #74b44a;
     color: #F1F1F1;
-    border: 2px solid #666666;
+    border: 2px solid #74b44a;
 }
 
 .btn, .btn:visited  {
@@ -197,6 +220,7 @@ a:hover, a:active {
     text-align: center;
     margin: 12px 0 24px;
     display: block;
+    
 }
 
 .btn:hover, .btn:focus, .btn:active {
@@ -232,15 +256,25 @@ a:hover, a:active {
 
 .hero-content p {
     font-family: 'Cabin', sans-serif;
-    font-size: 18px;
-    color: #F1F1F1;
+    font-size: 1.5em;
+    font-weight:700;
+    color: #9c500d;
+    text-shadow: #00000a -1px 2px 0px;
     line-height: 1.5;
+    margin: 60px;
+    margin-bottom: 65px;
+    text-decoration-style: solid;
+    letter-spacing: 2px;
+    
+    
 }
 
 section h2 {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 48px;
     text-transform: uppercase;
+  
+  
 }
 
 section h3 {
